[project]
name = "butterbackup"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[tool.uv.workspace]
members = ["projects/*"]

[tool.mypy]
plugins = [
  "pydantic.mypy"
]
allow_any_unimported = false
warn_unreachable = true
enable_error_code = [
    "possibly-undefined"
]
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_incomplete_defs = true
allow_untyped_defs = true
disable_error_code = [
    "possibly-undefined"
]
