[project]
name = "shell-interface"
version = "2.0.0"
description = "Helpful and convenient utilities to interact with UNIX shells"
authors = [{name = "Max Görner", email = "5477952+MaxG87@users.noreply.github.com"}]
repository = "https://github.com/MaxG87/shell-interface"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://github.com/MaxG87/shell-interface"
Repository = "https://github.com/MaxG87/shell-interface"
Issues = "https://github.com/MaxG87/shell-interface/issues"
Changelog = "https://github.com/MaxG87/shell-interface/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "hypothesis>=6.155.7",
    "mypy>=2.1.0",
    "pdbpp>=0.12.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.16",
]
typecheck = ["pydantic"]

[tool.ruff]
src = [".", "src/"]
extend = "../../pyproject.toml"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
