[project]
name = "storage-device-managers"
version = "2.0.0"
description = "Helpful context managers for managing decryption and mounts of storage devices"
authors = [ {name = "Max Görner", email = "5477952+MaxG87@users.noreply.github.com" } ]
repository = "https://github.com/MaxG87/storage-device-managers"
readme = "README.md"
license = "GPL-3.0-or-later"
dependencies = [
    "loguru>=0.7.3",
    "shell-interface>=2.0.0",
]
requires-python = ">=3.11"


[project.urls]
Homepage = "https://github.com/MaxG87/storage-device-managers"
Repository = "https://github.com/MaxG87/storage-device-managers"
Issues = "https://github.com/MaxG87/storage-device-managers/issues"
Changelog = "https://github.com/MaxG87/storage-device-managers/blob/main/CHANGELOG.md"


[project.optional-dependencies]
logging = ["loguru"]


[dependency-groups]
dev = [
    "hypothesis>=6.141.1",
    "mypy>=1.19.1",
    "pdbpp>=0.12.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.7",
]

[tool.mypy]
allow_any_unimported = false
warn_unreachable = true
enable_error_code = [
    "possibly-undefined"
]
strict = true


[[tool.mypy.overrides]]
module = "tests.*"
allow_incomplete_defs = true
allow_untyped_defs = true
disable_error_code = [
    "possibly-undefined"
]

[tool.pytest.ini_options]
addopts = [
    "--cov", "src",
    "--cov-branch",
    "--cov-fail-under", "85"
]
testpaths = ["tests"]

[tool.ruff]
src = [".", "src/"]

[tool.ruff.lint]
select = ["A", "B", "C", "F", "I", "ISC", "PIE", "PL", "Q", "RUF", "SIM", "TID", "W", "YTT"]
ignore = ["E", "SIM117"]
mccabe.max-complexity = 6

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
