[project]
name = "storage-device-managers"
version = "2.0.0"
description = "Helpful context managers for managing decryption and mounts of storage devices"
authors = [ {name = "Max Görner", email = "5477952+MaxG87@users.noreply.github.com" } ]
repository = "https://github.com/MaxG87/storage-device-managers"
readme = "README.md"
license = "GPL-3.0-or-later"
dependencies = [
    "loguru>=0.7.3",
    "msgspec>=0.21.1",
    "shell-interface",
]
requires-python = ">=3.11"


[project.urls]
Homepage = "https://github.com/MaxG87/storage-device-managers"
Repository = "https://github.com/MaxG87/storage-device-managers"
Issues = "https://github.com/MaxG87/storage-device-managers/issues"
Changelog = "https://github.com/MaxG87/storage-device-managers/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "hypothesis>=6.155.7",
    "mypy>=2.1.0",
    "pdbpp>=0.12.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.16",
]
typecheck = ["pydantic"]


[tool.ruff]
src = [".", "src/"]
extend = "../../pyproject.toml"


[tool.uv.sources]
shell-interface = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
